Add CloudEvent endpoint
